# cmake_sample

./: CMakeLists.txt  README.md  sample.cpp
lib/: CMakeLists.txt  lib1.cpp  lib1.h
